Fix context menu z-index
Force the main view area to be in its own z-index stack. This is
necessary to avoid the menu being rendered beneath the main geoJS view.

--- a/web_external/Viewer/style.styl
+++ b/web_external/Viewer/style.styl
@@ -66,5 +66,8 @@
       .spinbox
         margin-left 4px
 
+  .v-viewer-wrapper.geojs-map
+    z-index 0
+
   .v-viewer-wrapper.geojs-map:focus
     outline none
